# DS50

./: README.md
02_DemoApp/: Build.bat  CMakeLists.txt  clean.bat
02_DemoApp/app/inc/: ISO8583.h  app_audio.h  app_button.h  app_callback.h  app_card_payment.h  app_dsp.h  app_emqx.h  app_initResource.h  app_lvgl.h  app_mutex.h  app_param.h  app_pub.h  app_trans.h  inifile.h  pub_tools.h  tms_term_mng.h
02_DemoApp/app/src/: main.c
02_DemoApp/app/src/app/: app_card_payment.c  app_dsp.c  app_trans.c  example8583.c  pub_tools.c
02_DemoApp/app/src/emqx/: app_emqx.c
02_DemoApp/app/src/pub/: app_audio.c  app_button.c  app_callback.c  app_initResource.c  app_keypad.c  app_lvgl.c  app_mutex.c  app_param.c  app_pub.c
02_DemoApp/cmake/: core_config.cmake  toolchain-gcc.cmake
02_DemoApp/components/include/: hal_config.h
02_DemoApp/components/lib/: fdl1.img  fdl2.img
02_DemoApp/dspread/inc/: SDK.h  api.h  api_audio.h  api_base64.h  api_battery.h  api_beep.h  api_camera.h  api_card.h  api_crypt.h  api_file.h  api_http.h  api_icc.h  api_keypad.h  api_lbs.h  api_lcd.h  api_log.h  api_lvgl.h  api_magcard.h  api_mqtt.h  api_ota.h  api_qrcode.h  api_rfc.h  api_rsa.h  api_sec_alg.h  api_sec_key.h  api_sec_sign.h  api_sec_smgt.h  api_security.h  api_seg_led.h  api_speaker.h  api_string.h  api_sys.h  api_sysParams.h  api_timer.h  api_tts.h  api_types.h  api_uart.h  api_usb.h  api_wifi.h  api_wireless.h  (+2 more)
02_DemoApp/dspread/lvgl_v7/: lv_conf.h  lvgtracedef.h
02_DemoApp/dspread/lvgl_v7/src/: lv_conf_internal.h  lv_start.c
02_DemoApp/dspread/lvgl_v7/src/lv_font/: lv_font.h
02_DemoApp/dspread/lvgl_v7/src/lv_hal/: lv_hal_tick.c
02_DemoApp/dspread/mbedtls/: config.h
02_DemoApp/tools/: modemgen.py
02_DemoApp/tools/win32/: 签名命令.txt
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/: config.cfg  mem_bridge_rom_CHIP_drom.lod  mem_bridge_rom_CHIP_irom.lod  notice.txt
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/DOC/: 99-coolsand-dongle.rules  coolwatcher.html  release_notes_custom.txt
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/map/2gTraceDB/: traceDb.yaml
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/map/8809/: 8955_hard.xml  traceDb.yaml
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/map/8909L/: 8909L_hard.xml  8909L_soft_pkg.xmd
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/map/8909L_fpga/: 8909L_soft_root.xmd
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/map/8910/: 8910_soft_pkg.xmd
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/map/elfdump/: 8850.xml  8909l.xml  8910.xml
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/plugins/cwmodem2ggui/: cwmodem2gguixl.rb
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/plugins/fastpf/: fastpf.rb
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/scripts/8909L/: base.rb  target_executor.rb
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/chipgen/Modem2G/toolpool/scripts/8909L_fpga/: base.rb  (+1 more)
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/drivers/8910usb/: release_notes.txt
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/drivers/8910usb/DriversForWin10/Drivers/: sprd_rda.cat  sprd_rda.inf  unisoc_iot.cat  unisoc_iot.inf  unisoc_iot_npi.cat  unisoc_iot_npi.inf
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/drivers/8910usb/DriversForWin78/Drivers/: sprd_rda.cat  unisoc_iot.cat  unisoc_iot_npi.cat
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/drivers/usb_cdc_driver/: libusb-coolsandrivers.rar
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/logs/: assert_-1_2025_11_18_14_06_00.ass  assert_-1_2025_11_18_14_54_11.ass
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/logs/cap/: log_bt_ap_-1_251119-105925.pcap  log_bt_riscv_-1_251118-132333.org  log_bt_riscv_-1_251118-140544.org  log_bt_riscv_-1_251118-142647.org  log_bt_riscv_-1_251118-143526.org  log_bt_riscv_-1_251118-144833.org  log_bt_riscv_-1_251118-145302.org  log_bt_riscv_-1_251118-155241.org  log_bt_riscv_-1_251118-162721.org  log_bt_riscv_-1_251118-163843.org  log_bt_riscv_-1_251119-094941.org  log_bt_riscv_-1_251121-155840.org  log_pubendyn_-1_251118-141907.pcap  log_pubendyn_-1_251118-142633.pcap  log_pubendyn_-1_251118-143445.pcap  log_pubendyn_-1_251118-145347.pcap  log_pubendyn_-1_251118-155030.pcap  log_pubendyn_-1_251118-162705.pcap  log_pubendyn_-1_251118-163812.pcap  log_pubendyn_-1_251119-094936.pcap  log_pubendyn_-1_251121-155805.pcap
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/profiles/: 8910.cwh  8910.cwp  8910.cws  Blank.cwp
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/rbbase/CoolWatcher/: cwuser.rb
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/rbbase/common/: base.rb  coolhost_connections.rb  help.rb  lod.rb  sxs.rb
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/rbbase/common/plugins/BufferProfile/: bufferprofileplugin.rb  plugin.rb
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/rbbase/common/plugins/flamulator/: plugin.rb
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/rbbase/common/plugins/tracer/: default.ini  default2g.ini  default3g.ini
03_Tool/Fibocom_Windows_CoolTools_V1.1.0.0/xcp/: 8808_8809.xcp  8809.xcp  8909.xcp
03_Tool/SmartToolKit_V1.0.0.6/: S20_SN_IMEI.json  SunyardSmartToolKit.exp  SunyardSmartToolKit.ini  SunyardSmartToolKit.lib
03_Tool/SmartToolKit_V1.0.0.6/config/: S20_KEY_S20A10224B4P1001_S20A10224B4P1200.txt  S20_KEY_TRP1324BWA2065_TRP1324BWA2069.txt
03_Tool/usb driver/: release_notes.txt
03_Tool/usb driver/DriversForWin10/Drivers/: sprd_rda.cat  unisoc_iot.cat  unisoc_iot_npi.cat
03_Tool/usb driver/DriversForWin10/Drivers/amd64/: sprd_rdavcom.sys  sprdvcomIOT.sys
03_Tool/usb driver/DriversForWin10/Drivers/i386/: sprd_rdavcom.sys  sprdvcomIOT.sys
03_Tool/usb driver/DriversForWin78/Drivers/: sprd_rda.cat  sprd_rda.inf  unisoc_iot.cat  unisoc_iot.inf  unisoc_iot_npi.cat  unisoc_iot_npi.inf
03_Tool/usb driver/DriversForWin78/Drivers/amd64/: sprd_rdavcom.sys  sprdvcomIOT.sys
03_Tool/usb driver/DriversForWin78/Drivers/i386/: sprd_rdavcom.sys  sprdvcomIOT.sys
(+14 files in other folders)
